# support-home-bot

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  master-plan-bot-homestay.md
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3ada4cb533ab_support_hourly_and_overnight_booking.py  7020c2936c2b_add_google_calendar_event_id_to_bookings.py  9aa37161f5c4_create_sprint3_tables.py  e66f2b728486_create_sprint2_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: dependencies.py  router.py
apps/api/app/api/routes/: facebook_webhook.py  health.py  telegram_webhook.py
apps/api/app/application/: errors.py
apps/api/app/application/use_cases/: process_incoming_message.py  process_telegram_callback.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: models.py  session.py
apps/api/app/domain/: __init__.py  booking.py  messaging.py  ports.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/infrastructure/ai/: __init__.py  fake_ai_responder.py  openai_conversation_responder.py
apps/api/app/infrastructure/cache/: __init__.py  redis_idempotency_store.py
apps/api/app/infrastructure/calendar/: fake_calendar_adapter.py  google_calendar_adapter.py
apps/api/app/infrastructure/messaging/: __init__.py  (+2 more)
apps/api/tests/: test_facebook_webhook.py  test_facebook_webhook_post.py  test_health.py  test_security.py
apps/api/tests/application/: test_process_incoming_message.py  test_process_telegram_callback.py
apps/api/tests/domain/: test_booking.py  test_messaging.py
(+36 files in other folders)
