[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "homestay-support-api"
version = "0.1.0"
description = "FastAPI backend for the Mây Homestay support bot"
requires-python = ">=3.13,<3.15"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "dateparser>=1.2,<2",
  "fastapi[standard-no-fastapi-cloud-cli]>=0.115,<1",
  "google-auth>=2.20.0",
  "requests>=2.31.0",
  "httpx>=0.28,<1",
  "openai>=1.60,<3",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<7",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
